@@ -883,13 +883,12 @@ static int parse_context_options(php_stream_context *context, zval *options)
 
 	ZEND_HASH_FOREACH_STR_KEY_VAL(Z_ARRVAL_P(options), wkey, wval) {
 		ZVAL_DEREF(wval);
-		if (Z_TYPE_P(wval) == IS_ARRAY) {
-		    ZEND_HASH_FOREACH_STR_KEY_VAL(Z_ARRVAL_P(wval), okey, oval) {
+		if (wkey && Z_TYPE_P(wval) == IS_ARRAY) {
+			ZEND_HASH_FOREACH_STR_KEY_VAL(Z_ARRVAL_P(wval), okey, oval) {
 				if (okey) {
 					php_stream_context_set_option(context, ZSTR_VAL(wkey), ZSTR_VAL(okey), oval);
 				}
 			} ZEND_HASH_FOREACH_END();
-
 		} else {
 			php_error_docref(NULL, E_WARNING, "options should have the form [\"wrappername\"][\"optionname\"] = $value");
 		}
